--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -88,7 +88,7 @@ button:hover {
 #workspaces {
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #d7827e;
+  background-color: #eb6f92;
   color: #faf4ed;
   border-radius: 50px;
 }
