--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,3 +1,10 @@
+@define-color base #faf4ed;
+@define-color surface #fffaf3;
+@define-color overlay #f2e9e1;
+@define-color text #575279;
+@define-color rose #d7827e;
+@define-color love #eb6f92;
+
 * {
   /* `otf-font-awesome` is required to be installed for icons */
   font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
@@ -57,7 +64,7 @@ button:hover {
 #workspaces button {
   padding: 0 5px;
   background-color: transparent;
-  color: #ffffff;
+  color: @text;
 }
 
 #workspaces button:hover {
@@ -88,8 +95,8 @@ button:hover {
 #workspaces {
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #eb6f92;
-  color: #faf4ed;
+  background-color: @base;
+  color: @text;
   border-radius: 50px;
 }
 
